Textos alterados para o português. Foram feitos também alguns ajustes nas validações do form.

--- a/src/shared/loading-screen/loading-template.html
+++ b/src/shared/loading-screen/loading-template.html
@@ -1,6 +1,6 @@
 <md-dialog id="plz_wait" style="box-shadow:none">
     <md-dialog-content layout="row" layout-margin layout-padding layout-align="center center" aria-label="wait">
     <md-progress-circular md-mode="indeterminate" md-diameter="50"></md-progress-circular>
-            Loading...
+            {{ message }}
     </md-dialog-content>
 </md-dialog>
